# nomnom

./: .nomnom.yml  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: README.md  release.sh
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  output.rs  processor.rs  walker.rs
test/: README.md  test-config.txt  test-executable
tests/: binary_detection_test.rs  filter_logging_test.rs  git_reference_test.rs  git_remote_ingestion_test.rs  redaction_patterns.rs  safe_logging_test.rs
