[package]
name = "nomnom"
version = "0.1.2"
edition = "2021"
authors = ["Chris Wessels"]
description = "CLI tool for converting a directory tree and its contents into AI-friendly outputs"
license = "MIT"
repository = "https://github.com/chriswessels/nomnom"
homepage = "https://github.com/chriswessels/nomnom"
documentation = "https://github.com/chriswessels/nomnom#readme"
keywords = ["cli", "code-analysis", "ai", "directory-tree", "file-processing"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"
rust-version = "1.83"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# File system and parallel processing
ignore = "0.4"
rayon = "1.8"
crossbeam-channel = "0.5"

# Binary detection and content inspection
infer = "0.15"
content_inspector = "0.2"

# Memory mapping
memmap2 = "0.9"

# Pattern matching and text processing
aho-corasick = "1.1"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
num_cpus = "1.16"
bytesize = "1.3"
dirs = "5.0"

# Build-time version info
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }

[[bin]]
name = "nomnom"
path = "src/main.rs"
